<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_toStartOf="@+id/textView2"
        android:background="#FF0101"
        android:gravity="center"
        android:text="@string/one"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:background="#FF0101"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/textView2"
        android:background="#FF0101"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/textView5"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/four"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/five"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/textView5"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/six"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/textView8"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/seven"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:text="@string/eight"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />
</RelativeLayout>